[metadata]
name = mahos
version = 0.1.0
author = Kosuke Tahara
author_email = ktaha@mosk.tytlabs.co.jp
description = "Measurement Automation Handling and Orchestration System"
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
python_requires = >=3.8, <3.11
packages = find:
include_package_data = True
zip_safe = False
[options.entry_points]
console_scripts =
        mahos = mahos.cli.main:main

[flake8]
max-line-length = 99
extend-ignore = E203,E266,E741
exclude = build,tests,mahos/gui/ui
